css fuke updated

--- a/contactUs.html
+++ b/contactUs.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="css/contactUs.css" />
   </head>
   <body>
-    <h1>GET IN TOUCH WITH THE OUR TEAM</h1>
+    <h1 class="a">GET IN TOUCH WITH THE OUR TEAM</h1>
+    <br />
+    <h4>
+      ANY QUESTION OR FEEDBACK,LET US KNOW.PLEASE FILL OUT THE FORM BELOW OR
+      EMAIL US DIRECTLY <a href="info@site.com">info@site.com</a>
+    </h6>
 
     <form action="contactUs.php">
       <table id="tblContactUs">
@@ -45,7 +50,7 @@
           </td>
         </tr>
       </table>
-      <input type="submit" value="send" />
+      <input type="submit" value="send" id="btnsend"/>
     </form>
   </body>
 </html>
