--- a/contactUs.html
+++ b/contactUs.html
@@ -5,20 +5,21 @@
     <link rel="stylesheet" href="css/contactUs.css" />
   </head>
   <body>
-    <h1 class="a">GET IN TOUCH WITH THE OUR TEAM</h1>
+    <h1>GET IN TOUCH WITH THE OUR TEAM</h1>
     <br />
     <h4>
       ANY QUESTION OR FEEDBACK,LET US KNOW.PLEASE FILL OUT THE FORM BELOW OR
       EMAIL US DIRECTLY <a href="info@site.com">info@site.com</a>
     </h6>
-
-    <form action="contactUs.php">
-      <table id="tblContactUs">
+    <div class="container">
+    <form action="contactUs.php" class="clsform">
+      <table >
         <tr>
           <td>
             <label>WHAT CAN WE HELP WITH?*</label>
           </td>
-          <td colspan="4"><input type="text" id="cntWhat" size="90" /></td>
+            <td colspan="4"><input type="text" id="cntWhat"  class="rounded" />
+          </td>
         </tr>
 
         <tr>
@@ -26,20 +27,20 @@
             <label>NAME *</label>
           </td>
           <td>
-            <input type="text" name="cntName" id="cntName" size="40" />
+            <input type="text" name="cntName" id="cntName" />
           </td>
           <td>
             <label>Email*</label>
           </td>
           <td>
-            <input type="text" name="cntEmail" id="cntEmail" size="40" />
+            <input type="text" name="cntEmail" id="cntEmail" size="40" class="btnradius"/>
           </td>
         </tr>
         <tr>
           <td>
             <label>MESSAGE*</label>
           </td>
-          <td colspan="3">
+          <td colspan="2">
             <textarea
               name="cntMessage"
               id="cntMessage"
@@ -48,9 +49,13 @@
               size="100"
             ></textarea>
           </td>
+        
         </tr>
       </table>
-      <input type="submit" value="send" id="btnsend"/>
+          <input type="submit" value="send" ali/>
+
     </form>
+    </div>
+    
   </body>
 </html>
