newly added nav bar

--- a/contactUs.html
+++ b/contactUs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Document</title>
-    <link rel="stylesheet" href="css/contactUs.css" />
+     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <h1>GET IN TOUCH WITH THE OUR TEAM</h1>
