--- a/navbar.html
+++ b/navbar.html
@@ -5,53 +5,49 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-cyan-100">
-    <div class="container min-h-screen bg-center bg-cover px-28 py-5">
-      <nav
-        class="p-5 bg-white shadow md:flex md:items-center md:justify-between"
-      >
-        <div>
-          <span class="text-2xl font-[poppins] cursor-pointer">
-            <img class="h-12 inline" src="/logo.jpg" />
-          </span>
-        </div>
-        <ul class="md:flex md:items-center font-[poppins]">
-          <li class="mx-4">
-            <a href="#" class="text-xl hover:text-cyan-500 duration-500">
-              QUESTION PAGE
-            </a>
-          </li>
-          <li class="mx-4">
-            <a href="#" class="text-xl hover:text-cyan-500 duration-500">
-              LEADERBOARD
-            </a>
-          </li>
-          <li class="mx-4">
-            <a href="#" class="text-xl hover:text-cyan-500 duration-500">
-              OLD QUESTION
-            </a>
-          </li>
-          <li class="mx-4">
-            <a href="#" class="text-xl hover:text-cyan-500 duration-500">
-              ABOUT US
-            </a>
-          </li>
-          <li class="mx-4">
-            <a href="#" class="text-xl hover:text-cyan-500 duration-500">
-              CONTACT US
-            </a>
-          </li>
-          <li class="mx-4">
-            <button
-              class="bg-cyan-400 text-black font-[poppins] duration-500 px-6 py-2 mx-4 hover:bg-cyan-500 rounded-3xl"
-            >
-              GET STARTED
-            </button>
-          </li>
-        </ul>
-      </nav>
+    <nav class="p-5 bg-white shadow md:flex md:items-center md:justify-between">
       <div>
-        <h1></h1>
+        <span class="text-2xl font-[poppins] cursor-pointer">
+          <img class="h-12 inline" src="/logo.jpg" />
+        </span>
       </div>
+      <ul class="md:flex md:items-center font-[poppins]">
+        <li class="mx-4">
+          <a href="#" class="text-xl hover:text-cyan-500 duration-500">
+            QUESTION PAGE
+          </a>
+        </li>
+        <li class="mx-4">
+          <a href="#" class="text-xl hover:text-cyan-500 duration-500">
+            LEADERBOARD
+          </a>
+        </li>
+        <li class="mx-4">
+          <a href="#" class="text-xl hover:text-cyan-500 duration-500">
+            OLD QUESTION
+          </a>
+        </li>
+        <li class="mx-4">
+          <a href="#" class="text-xl hover:text-cyan-500 duration-500">
+            ABOUT US
+          </a>
+        </li>
+        <li class="mx-4">
+          <a href="#" class="text-xl hover:text-cyan-500 duration-500">
+            CONTACT US
+          </a>
+        </li>
+        <li class="mx-4">
+          <button
+            class="bg-cyan-400 text-black font-[poppins] duration-500 px-6 py-2 mx-4 hover:bg-cyan-500 rounded-3xl"
+          >
+            GET STARTED
+          </button>
+        </li>
+      </ul>
+    </nav>
+    <div>
+      <h1></h1>
     </div>
   </body>
 </html>
