--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
   <body class="bg-cyan-100 font-[poppins]">
     <nav class="p-5 bg-white shadow md:flex md:items-center md:justify-between">
       <div class="flex justify-between items-center">
-        <span class="text-2xl font-[poppins] cursor-pointer">
+        <span class="text-2xl cursor-pointer">
           <img class="h-12 inline" src="/logo.jpg" />Qpage
         </span>
         <span class="text-3xl cursor-pointer mx-2 md:hidden block">
