background image removed & edit navbar

--- a/pastquestions.html
+++ b/pastquestions.html
@@ -14,12 +14,12 @@
         <a href="Qustion page.html" id="logo">Logo</a>
         <div id="navbar-right">
               <a class="active" href="index.html" >Home</a>
-                  <a href="Qustion page.html" >Question page</a> 
-                  <a href="Calender.html" >Calender</a>
-                  <a href="Leadboard.html">Leadboard</a>
-                  <a href="About us.html" >Aboutus</a>
-                  <a href="contact Us.html">Contact us</a>
-                  <a href="Admin page.html">Admin page</a>
+                <a href="Qustion page.html" >Question page</a> 
+                <a href="Past Questions.html" >Past Question</a>
+                <a href="Leadboard.html">Leadboard</a>
+                <a href="About us.html" >Aboutus</a>
+                <a href="contact Us.html">Contact us</a>
+                <a href="Admin page.html">Admin</a>
                 
                   <a href="https://github.com/login">
                       <button type="button" id="button1"  >Sign up</button>
