--- a/pastquestions.html
+++ b/pastquestions.html
@@ -15,15 +15,13 @@
         <div id="navbar-right">
               <a class="active" href="index.html" >Home</a>
                 <a href="Qustion page.html" >Question page</a> 
-                <a href="Past Questions.html" >Past Question</a>
+                <a href="pastquestions.html" >Past Question</a>
                 <a href="Leadboard.html">Leadboard</a>
                 <a href="About us.html" >Aboutus</a>
-                <a href="contact Us.html">Contact us</a>
+                <a href="contactUs.html">Contact us</a>
                 <a href="Admin page.html">Admin</a>
                 
-                  <a href="https://github.com/login">
-                      <button type="button" id="button1"  >Sign up</button>
-                  </a>
+                 
         </div> 
       </div>
 
